:memo: Incluindo função de ETL para o S3 dos dados do meteostat

--- a/pipelines/dados_meteostat_distritos.ipynb
+++ b/pipelines/dados_meteostat_distritos.ipynb
@@ -2,19 +2,97 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>codigo_distrito</th>\n",
+       "      <th>cod_ibge</th>\n",
+       "      <th>distrito</th>\n",
+       "      <th>regioes</th>\n",
+       "      <th>codigo_subprefeitura</th>\n",
+       "      <th>subprefeituras</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>80001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Água Rasa</td>\n",
+       "      <td>Leste</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Mooca</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>80002</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Alto de Pinheiros</td>\n",
+       "      <td>Oeste</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>Pinheiros</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>80003</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Anhanguera</td>\n",
+       "      <td>Norte</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Perus</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   codigo_distrito  cod_ibge           distrito regioes  codigo_subprefeitura  \\\n",
+       "0            80001         1          Água Rasa   Leste                  25.0   \n",
+       "1            80002         2  Alto de Pinheiros   Oeste                  11.0   \n",
+       "2            80003         3         Anhanguera   Norte                   1.0   \n",
+       "\n",
+       "  subprefeituras  \n",
+       "0          Mooca  \n",
+       "1      Pinheiros  \n",
+       "2          Perus  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('/home/ryanrodr/Downloads/codigos_distritos_msp.csv', encoding='latin1', sep=';')\n",
+    "df = pd.read_csv('../dados/codigos_distritos_msp.csv', encoding='latin1', sep=';')\n",
     "df.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +136,267 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FutureWarning: Support for nested sequences for 'parse_dates' in pd.read_csv is deprecated. Combine the desired columns with pd.to_datetime after parsing instead.\n",
+      "FutureWarning: Support for nested sequences for 'parse_dates' in pd.read_csv is deprecated. Combine the desired columns with pd.to_datetime after parsing instead.\n",
+      "FutureWarning: Support for nested sequences for 'parse_dates' in pd.read_csv is deprecated. Combine the desired columns with pd.to_datetime after parsing instead.\n",
+      "FutureWarning: Support for nested sequences for 'parse_dates' in pd.read_csv is deprecated. Combine the desired columns with pd.to_datetime after parsing instead.\n",
+      "FutureWarning: Support for nested sequences for 'parse_dates' in pd.read_csv is deprecated. Combine the desired columns with pd.to_datetime after parsing instead.\n",
+      "FutureWarning: Support for nested sequences for 'parse_dates' in pd.read_csv is deprecated. Combine the desired columns with pd.to_datetime after parsing instead.\n",
+      "FutureWarning: Support for nested sequences for 'parse_dates' in pd.read_csv is deprecated. Combine the desired columns with pd.to_datetime after parsing instead.\n",
+      "FutureWarning: Support for nested sequences for 'parse_dates' in pd.read_csv is deprecated. Combine the desired columns with pd.to_datetime after parsing instead.\n",
+      "FutureWarning: Support for nested sequences for 'parse_dates' in pd.read_csv is deprecated. Combine the desired columns with pd.to_datetime after parsing instead.\n",
+      "FutureWarning: The behavior of array concatenation with empty entries is deprecated. In a future version, this will no longer exclude empty items when determining the result dtype. To retain the old behavior, exclude the empty entries before the concat operation.\n",
+      "FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>tavg</th>\n",
+       "      <th>tmin</th>\n",
+       "      <th>tmax</th>\n",
+       "      <th>prcp</th>\n",
+       "      <th>snow</th>\n",
+       "      <th>wdir</th>\n",
+       "      <th>wspd</th>\n",
+       "      <th>wpgt</th>\n",
+       "      <th>pres</th>\n",
+       "      <th>tsun</th>\n",
+       "      <th>Distrito</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1950-01-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Água Rasa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1950-01-02</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Água Rasa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1950-01-03</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Água Rasa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1950-01-04</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Água Rasa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1950-01-05</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Água Rasa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2558622</th>\n",
+       "      <td>2024-08-23</td>\n",
+       "      <td>22.6</td>\n",
+       "      <td>15.5</td>\n",
+       "      <td>31.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>347.0</td>\n",
+       "      <td>17.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1013.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Lajeado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2558623</th>\n",
+       "      <td>2024-08-24</td>\n",
+       "      <td>17.6</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>26.8</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>16.2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1017.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Lajeado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2558624</th>\n",
+       "      <td>2024-08-25</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>14.2</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>167.0</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1023.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Lajeado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2558625</th>\n",
+       "      <td>2024-08-26</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>16.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>13.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1025.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Lajeado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2558626</th>\n",
+       "      <td>2024-08-27</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>111.0</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1026.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Lajeado</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2558627 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             index  tavg  tmin  tmax  prcp  snow   wdir  wspd  wpgt    pres  \\\n",
+       "0       1950-01-01   NaN   NaN   NaN   0.0   NaN    NaN   NaN   NaN     NaN   \n",
+       "1       1950-01-02   NaN   NaN   NaN   0.0   NaN    NaN   NaN   NaN     NaN   \n",
+       "2       1950-01-03   NaN   NaN   NaN   0.0   NaN    NaN   NaN   NaN     NaN   \n",
+       "3       1950-01-04   NaN   NaN   NaN   0.0   NaN    NaN   NaN   NaN     NaN   \n",
+       "4       1950-01-05   NaN   NaN   NaN  29.3   NaN    NaN   NaN   NaN     NaN   \n",
+       "...            ...   ...   ...   ...   ...   ...    ...   ...   ...     ...   \n",
+       "2558622 2024-08-23  22.6  15.5  31.2   0.0   NaN  347.0  17.5   NaN  1013.5   \n",
+       "2558623 2024-08-24  17.6  14.6  26.8   3.5   NaN  152.0  16.2   NaN  1017.9   \n",
+       "2558624 2024-08-25  12.1   9.1  14.2   6.6   NaN  167.0  14.8   NaN  1023.8   \n",
+       "2558625 2024-08-26  10.4   6.4  16.2   0.0   NaN  145.0  13.1   NaN  1025.0   \n",
+       "2558626 2024-08-27   9.8   4.5  17.9   0.0   NaN  111.0  15.6   NaN  1026.1   \n",
+       "\n",
+       "         tsun   Distrito  \n",
+       "0         NaN  Água Rasa  \n",
+       "1         NaN  Água Rasa  \n",
+       "2         NaN  Água Rasa  \n",
+       "3         NaN  Água Rasa  \n",
+       "4         NaN  Água Rasa  \n",
+       "...       ...        ...  \n",
+       "2558622   NaN    Lajeado  \n",
+       "2558623   NaN    Lajeado  \n",
+       "2558624   NaN    Lajeado  \n",
+       "2558625   NaN    Lajeado  \n",
+       "2558626   NaN    Lajeado  \n",
+       "\n",
+       "[2558627 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from meteostat import Point, Daily\n",
     "from datetime import datetime\n",
@@ -95,6 +431,73 @@
     "\n",
     "final_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "access_key_id = os.getenv(\"AWS_ACCESS_KEY_ID\")\n",
+    "secret_access_key = os.getenv(\"AWS_SECRET_ACCESS_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ResponseMetadata': {'RequestId': '95WVBXPGVY640B65',\n",
+       "  'HostId': 'KA18Cz/wXyRITU9xkAir3Nry3N+f2dsMEEGAFQYjj/T3xO5ojR70GrAkJy+oUqvnu2iy+wYrkU0=',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amz-id-2': 'KA18Cz/wXyRITU9xkAir3Nry3N+f2dsMEEGAFQYjj/T3xO5ojR70GrAkJy+oUqvnu2iy+wYrkU0=',\n",
+       "   'x-amz-request-id': '95WVBXPGVY640B65',\n",
+       "   'date': 'Thu, 29 Aug 2024 23:25:13 GMT',\n",
+       "   'x-amz-version-id': 'Gha5sFpjo7i9dLo0lBhQjdpEKXEyrrq.',\n",
+       "   'x-amz-server-side-encryption': 'AES256',\n",
+       "   'etag': '\"f90a8ef1f64ea388ff9e751393b1bd5e\"',\n",
+       "   'server': 'AmazonS3',\n",
+       "   'content-length': '0'},\n",
+       "  'RetryAttempts': 1},\n",
+       " 'ETag': '\"f90a8ef1f64ea388ff9e751393b1bd5e\"',\n",
+       " 'ServerSideEncryption': 'AES256',\n",
+       " 'VersionId': 'Gha5sFpjo7i9dLo0lBhQjdpEKXEyrrq.'}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import boto3\n",
+    "from io import StringIO\n",
+    "\n",
+    "\n",
+    "s3 = boto3.client('s3',\n",
+    "                  aws_access_key_id=access_key_id,\n",
+    "                  aws_secret_access_key=secret_access_key,\n",
+    "                  region_name = 'sa-east-1')\n",
+    "\n",
+    "csv_buffer = StringIO()\n",
+    "final_data.to_csv(csv_buffer, index=False)\n",
+    "\n",
+    "# Inicializar o cliente do AWS S3\n",
+    "s3 = boto3.client('s3')\n",
+    "\n",
+    "# Carregar o arquivo CSV para o S3\n",
+    "s3.put_object(Bucket='black-umbrella-fiap',\n",
+    "              Key='bronze/meteostat/dados_meteorologicos_meteostat.csv',\n",
+    "              Body=csv_buffer.getvalue())"
+   ]
   }
  ],
  "metadata": {
@@ -113,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
