Ajustando código meteostat e adicionando csv dos distritos com lat e lon

--- a/pipelines/dados_openweather_teste.ipynb
+++ b/pipelines/dados_openweather_teste.ipynb
@@ -2,107 +2,234 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              Timestamp  Temperature Weather Description\n",
-      "0   2024-08-30 03:00:00       292.10           clear sky\n",
-      "1   2024-08-30 06:00:00       291.73           clear sky\n",
-      "2   2024-08-30 09:00:00       290.59           clear sky\n",
-      "3   2024-08-30 12:00:00       294.68           clear sky\n",
-      "4   2024-08-30 15:00:00       300.41           clear sky\n",
-      "5   2024-08-30 18:00:00       302.38           clear sky\n",
-      "6   2024-08-30 21:00:00       299.69           clear sky\n",
-      "7   2024-08-31 00:00:00       296.89           clear sky\n",
-      "8   2024-08-31 03:00:00       294.62           clear sky\n",
-      "9   2024-08-31 06:00:00       292.82           clear sky\n",
-      "10  2024-08-31 09:00:00       291.58           clear sky\n",
-      "11  2024-08-31 12:00:00       294.80           clear sky\n",
-      "12  2024-08-31 15:00:00       300.99       broken clouds\n",
-      "13  2024-08-31 18:00:00       302.71       broken clouds\n",
-      "14  2024-08-31 21:00:00       300.09     overcast clouds\n",
-      "15  2024-09-01 00:00:00       297.60     overcast clouds\n",
-      "16  2024-09-01 03:00:00       295.56     overcast clouds\n",
-      "17  2024-09-01 06:00:00       293.88       broken clouds\n",
-      "18  2024-09-01 09:00:00       293.07       broken clouds\n",
-      "19  2024-09-01 12:00:00       298.06       broken clouds\n",
-      "20  2024-09-01 15:00:00       304.90    scattered clouds\n",
-      "21  2024-09-01 18:00:00       306.43       broken clouds\n",
-      "22  2024-09-01 21:00:00       304.25           clear sky\n",
-      "23  2024-09-02 00:00:00       300.57          few clouds\n",
-      "24  2024-09-02 03:00:00       298.48          few clouds\n",
-      "25  2024-09-02 06:00:00       296.91    scattered clouds\n",
-      "26  2024-09-02 09:00:00       293.80       broken clouds\n",
-      "27  2024-09-02 12:00:00       294.79    scattered clouds\n",
-      "28  2024-09-02 15:00:00       302.32           clear sky\n",
-      "29  2024-09-02 18:00:00       305.78           clear sky\n",
-      "30  2024-09-02 21:00:00       301.94           clear sky\n",
-      "31  2024-09-03 00:00:00       295.08           clear sky\n",
-      "32  2024-09-03 03:00:00       294.24           clear sky\n",
-      "33  2024-09-03 06:00:00       293.61           clear sky\n",
-      "34  2024-09-03 09:00:00       292.81           clear sky\n",
-      "35  2024-09-03 12:00:00       296.70           clear sky\n",
-      "36  2024-09-03 15:00:00       304.04           clear sky\n",
-      "37  2024-09-03 18:00:00       307.65           clear sky\n",
-      "38  2024-09-03 21:00:00       305.27           clear sky\n",
-      "39  2024-09-04 00:00:00       301.37           clear sky\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Distrito</th>\n",
+       "      <th>Temperatura (°C)</th>\n",
+       "      <th>Descrição</th>\n",
+       "      <th>Umidade (%)</th>\n",
+       "      <th>Vento (m/s)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Água Rasa</td>\n",
+       "      <td>22.51</td>\n",
+       "      <td>céu limpo</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alto de Pinheiros</td>\n",
+       "      <td>21.23</td>\n",
+       "      <td>céu limpo</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Anhanguera</td>\n",
+       "      <td>24.07</td>\n",
+       "      <td>céu limpo</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Aricanduva</td>\n",
+       "      <td>22.61</td>\n",
+       "      <td>céu limpo</td>\n",
+       "      <td>39</td>\n",
+       "      <td>1.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Artur Alvim</td>\n",
+       "      <td>22.16</td>\n",
+       "      <td>céu limpo</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>Vila Medeiros</td>\n",
+       "      <td>21.34</td>\n",
+       "      <td>céu limpo</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>Vila Prudente</td>\n",
+       "      <td>22.67</td>\n",
+       "      <td>céu limpo</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>Vila Sônia</td>\n",
+       "      <td>23.54</td>\n",
+       "      <td>céu limpo</td>\n",
+       "      <td>61</td>\n",
+       "      <td>1.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>São Domingos</td>\n",
+       "      <td>21.35</td>\n",
+       "      <td>céu limpo</td>\n",
+       "      <td>52</td>\n",
+       "      <td>1.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>Lajeado</td>\n",
+       "      <td>19.87</td>\n",
+       "      <td>céu limpo</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1.14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>96 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Distrito  Temperatura (°C)  Descrição  Umidade (%)  Vento (m/s)\n",
+       "0           Água Rasa             22.51  céu limpo           40         1.26\n",
+       "1   Alto de Pinheiros             21.23  céu limpo           50         1.62\n",
+       "2          Anhanguera             24.07  céu limpo           65         1.78\n",
+       "3          Aricanduva             22.61  céu limpo           39         1.21\n",
+       "4         Artur Alvim             22.16  céu limpo           38         1.28\n",
+       "..                ...               ...        ...          ...          ...\n",
+       "91      Vila Medeiros             21.34  céu limpo           42         1.39\n",
+       "92      Vila Prudente             22.67  céu limpo           40         1.16\n",
+       "93         Vila Sônia             23.54  céu limpo           61         1.49\n",
+       "94       São Domingos             21.35  céu limpo           52         1.74\n",
+       "95            Lajeado             19.87  céu limpo           45         1.14\n",
+       "\n",
+       "[96 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
+    "import time\n",
     "\n",
-    "latitude = -23.5505\n",
-    "longitude = -46.6333\n",
+    "df = pd.read_csv('../dados/distritos_lat_lon.csv')\n",
+    "df.head(3)\n",
     "\n",
     "# OpenWeatherMap API Key\n",
     "api_key = \"eb27e58eb68d175624e79e4efed521eb\"\n",
     "\n",
-    "# URL para obter dados meteorológicos atuais\n",
-    "url = f'http://api.openweathermap.org/data/2.5/forecast?lat={latitude}&lon={longitude}&appid={api_key}'\n",
+    "# Função para obter dados meteorológicos para um par de coordenadas\n",
+    "def get_weather_data(latitude, longitude, api_key):\n",
+    "    # URL para obter dados meteorológicos atuais\n",
+    "    url = f'http://api.openweathermap.org/data/2.5/forecast?lat={latitude}&lon={longitude}&appid={api_key}&units=metric&lang=pt_br'\n",
+    "    \n",
+    "    # Fazendo a requisição para a API\n",
+    "    response = requests.get(url)\n",
+    "    \n",
+    "    # Verificando se a requisição foi bem-sucedida\n",
+    "    if response.status_code == 200:\n",
+    "        return response.json()\n",
+    "    else:\n",
+    "        print(f\"Erro ao buscar dados para lat: {latitude}, lon: {longitude}\")\n",
+    "        return None\n",
     "\n",
-    "# Fazer a solicitação GET\n",
-    "response = requests.get(url)\n",
+    "# Loop pelos dados do DataFrame para obter dados meteorológicos\n",
+    "weather_results = []\n",
     "\n",
-    "# Verificar o status da resposta\n",
-    "if response.status_code == 200:\n",
-    "    # Converter a resposta JSON para um dicionário Python\n",
-    "    data = response.json()\n",
+    "for index, row in df.iterrows():\n",
+    "    latitude = row['Latitude']\n",
+    "    longitude = row['Longitude']\n",
+    "    district = row['Distrito']\n",
     "    \n",
-    "    # Extrair os dados relevantes do JSON\n",
-    "    forecasts = data['list']\n",
+    "    # Obtendo os dados meteorológicos\n",
+    "    weather_data = get_weather_data(latitude, longitude, api_key)\n",
     "    \n",
-    "    # Criar listas para armazenar os dados\n",
-    "    timestamps = []\n",
-    "    temperatures = []\n",
-    "    weather_descriptions = []\n",
+    "    if weather_data:\n",
+    "        # Extraindo alguns dados do JSON retornado\n",
+    "        current_weather = {\n",
+    "            'Distrito': district,\n",
+    "            'Temperatura (°C)': weather_data['list'][0]['main']['temp'],\n",
+    "            'Descrição': weather_data['list'][0]['weather'][0]['description'],\n",
+    "            'Umidade (%)': weather_data['list'][0]['main']['humidity'],\n",
+    "            'Vento (m/s)': weather_data['list'][0]['wind']['speed']\n",
+    "        }\n",
+    "        weather_results.append(current_weather)\n",
     "    \n",
-    "    for forecast in forecasts:\n",
-    "        timestamps.append(forecast['dt_txt'])\n",
-    "        temperatures.append(forecast['main']['temp'])\n",
-    "        weather_descriptions.append(forecast['weather'][0]['description'])\n",
-    "    \n",
-    "    # Criar um DataFrame com os dados\n",
-    "    df = pd.DataFrame({\n",
-    "        'Timestamp': timestamps,\n",
-    "        'Temperature': temperatures,\n",
-    "        'Weather Description': weather_descriptions\n",
-    "    })\n",
-    "    \n",
-    "    print(df)\n",
-    "else:\n",
-    "    print(f'Erro ao fazer a solicitação: {response.status_code}')"
+    "    # Pausa para evitar sobrecarga na API\n",
+    "    time.sleep(1)\n",
+    "\n",
+    "# Convertendo os resultados para um DataFrame\n",
+    "weather_df = pd.DataFrame(weather_results)\n",
+    "weather_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
