--- a/pipelines/dados_meteostat_distritos.ipynb
+++ b/pipelines/dados_meteostat_distritos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "2          Perus  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,6 +128,7 @@
     "        \"Latitude\": lat,\n",
     "        \"Longitude\": long\n",
     "    })\n",
+    "    time.sleep(1)\n",
     "\n",
     "# Crie um DataFrame para visualizar os resultados\n",
     "df2 = pd.DataFrame(resultados)\n",
@@ -136,17 +137,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.to_csv('../dados/distritos_lat_lon.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "FutureWarning: Support for nested sequences for 'parse_dates' in pd.read_csv is deprecated. Combine the desired columns with pd.to_datetime after parsing instead.\n",
-      "FutureWarning: Support for nested sequences for 'parse_dates' in pd.read_csv is deprecated. Combine the desired columns with pd.to_datetime after parsing instead.\n",
-      "FutureWarning: Support for nested sequences for 'parse_dates' in pd.read_csv is deprecated. Combine the desired columns with pd.to_datetime after parsing instead.\n",
-      "FutureWarning: Support for nested sequences for 'parse_dates' in pd.read_csv is deprecated. Combine the desired columns with pd.to_datetime after parsing instead.\n",
       "FutureWarning: Support for nested sequences for 'parse_dates' in pd.read_csv is deprecated. Combine the desired columns with pd.to_datetime after parsing instead.\n",
       "FutureWarning: Support for nested sequences for 'parse_dates' in pd.read_csv is deprecated. Combine the desired columns with pd.to_datetime after parsing instead.\n",
       "FutureWarning: Support for nested sequences for 'parse_dates' in pd.read_csv is deprecated. Combine the desired columns with pd.to_datetime after parsing instead.\n",
@@ -392,7 +398,7 @@
        "[2558627 rows x 12 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,40 +449,16 @@
     "\n",
     "load_dotenv()\n",
     "\n",
+    "# Acessar as credenciais da AWS\n",
     "access_key_id = os.getenv(\"AWS_ACCESS_KEY_ID\")\n",
     "secret_access_key = os.getenv(\"AWS_SECRET_ACCESS_KEY\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '95WVBXPGVY640B65',\n",
-       "  'HostId': 'KA18Cz/wXyRITU9xkAir3Nry3N+f2dsMEEGAFQYjj/T3xO5ojR70GrAkJy+oUqvnu2iy+wYrkU0=',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amz-id-2': 'KA18Cz/wXyRITU9xkAir3Nry3N+f2dsMEEGAFQYjj/T3xO5ojR70GrAkJy+oUqvnu2iy+wYrkU0=',\n",
-       "   'x-amz-request-id': '95WVBXPGVY640B65',\n",
-       "   'date': 'Thu, 29 Aug 2024 23:25:13 GMT',\n",
-       "   'x-amz-version-id': 'Gha5sFpjo7i9dLo0lBhQjdpEKXEyrrq.',\n",
-       "   'x-amz-server-side-encryption': 'AES256',\n",
-       "   'etag': '\"f90a8ef1f64ea388ff9e751393b1bd5e\"',\n",
-       "   'server': 'AmazonS3',\n",
-       "   'content-length': '0'},\n",
-       "  'RetryAttempts': 1},\n",
-       " 'ETag': '\"f90a8ef1f64ea388ff9e751393b1bd5e\"',\n",
-       " 'ServerSideEncryption': 'AES256',\n",
-       " 'VersionId': 'Gha5sFpjo7i9dLo0lBhQjdpEKXEyrrq.'}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import boto3\n",
     "from io import StringIO\n",
@@ -498,6 +480,13 @@
     "              Key='bronze/meteostat/dados_meteorologicos_meteostat.csv',\n",
     "              Body=csv_buffer.getvalue())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -516,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
