--- a/localizacoes/servicos_saude.ipynb
+++ b/localizacoes/servicos_saude.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,391 @@
     "df['Latitude'], df['Longitude'] = zip(*df.apply(lambda row: utm_para_latlon(row['COORD_E'], row['COORD_N']), axis=1))\n",
     "\n",
     "# Exibindo o DataFrame atualizado\n",
-    "df.head()\n"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>COORD_E</th>\n",
+       "      <th>COORD_N</th>\n",
+       "      <th>SETCENS</th>\n",
+       "      <th>AREAP</th>\n",
+       "      <th>CODDIST</th>\n",
+       "      <th>DISTRITO</th>\n",
+       "      <th>CODSUBPREF</th>\n",
+       "      <th>SUBPREF</th>\n",
+       "      <th>REGIAO5</th>\n",
+       "      <th>...</th>\n",
+       "      <th>CNES</th>\n",
+       "      <th>SA_DEPADM</th>\n",
+       "      <th>DEPADM</th>\n",
+       "      <th>SA_TIPO</th>\n",
+       "      <th>TIPO</th>\n",
+       "      <th>SA_CLASSE</th>\n",
+       "      <th>CLASSE</th>\n",
+       "      <th>LEITOS</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>319108.42</td>\n",
+       "      <td>7380764.47</td>\n",
+       "      <td>355030819000016</td>\n",
+       "      <td>3550308005232</td>\n",
+       "      <td>19</td>\n",
+       "      <td>CAPAO REDONDO</td>\n",
+       "      <td>17</td>\n",
+       "      <td>CAMPO LIMPO</td>\n",
+       "      <td>Sul</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6194974</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Municipal</td>\n",
+       "      <td>49</td>\n",
+       "      <td>AMA ESPECIALIDADES</td>\n",
+       "      <td>1</td>\n",
+       "      <td>AMBULATORIOS ESPECIALIZADOS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-23.673787</td>\n",
+       "      <td>-46.773848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>331055.43</td>\n",
+       "      <td>7400384.23</td>\n",
+       "      <td>355030821000001</td>\n",
+       "      <td>3550308005062</td>\n",
+       "      <td>21</td>\n",
+       "      <td>CASA VERDE</td>\n",
+       "      <td>4</td>\n",
+       "      <td>CASA VERDE-CACHOEIRINHA</td>\n",
+       "      <td>Norte</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6148336</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Municipal</td>\n",
+       "      <td>49</td>\n",
+       "      <td>AMA ESPECIALIDADES</td>\n",
+       "      <td>1</td>\n",
+       "      <td>AMBULATORIOS ESPECIALIZADOS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-23.497937</td>\n",
+       "      <td>-46.654510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>330196.17</td>\n",
+       "      <td>7380955.02</td>\n",
+       "      <td>355030822000066</td>\n",
+       "      <td>3550308005164</td>\n",
+       "      <td>22</td>\n",
+       "      <td>CIDADE ADEMAR</td>\n",
+       "      <td>16</td>\n",
+       "      <td>CIDADE ADEMAR</td>\n",
+       "      <td>Sul</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6415415</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Municipal</td>\n",
+       "      <td>49</td>\n",
+       "      <td>AMA ESPECIALIDADES</td>\n",
+       "      <td>1</td>\n",
+       "      <td>AMBULATORIOS ESPECIALIZADOS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-23.673273</td>\n",
+       "      <td>-46.665135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>326183.88</td>\n",
+       "      <td>7373067.87</td>\n",
+       "      <td>355030823000196</td>\n",
+       "      <td>3550308005287</td>\n",
+       "      <td>23</td>\n",
+       "      <td>CIDADE DUTRA</td>\n",
+       "      <td>19</td>\n",
+       "      <td>CAPELA DO SOCORRO</td>\n",
+       "      <td>Sul</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6360890</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Municipal</td>\n",
+       "      <td>49</td>\n",
+       "      <td>AMA ESPECIALIDADES</td>\n",
+       "      <td>1</td>\n",
+       "      <td>AMBULATORIOS ESPECIALIZADOS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-23.744055</td>\n",
+       "      <td>-46.705393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>351434.05</td>\n",
+       "      <td>7396009.19</td>\n",
+       "      <td>355030837000019</td>\n",
+       "      <td>3550308005202</td>\n",
+       "      <td>37</td>\n",
+       "      <td>ITAQUERA</td>\n",
+       "      <td>27</td>\n",
+       "      <td>ITAQUERA</td>\n",
+       "      <td>Leste</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6394558</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Municipal</td>\n",
+       "      <td>49</td>\n",
+       "      <td>AMA ESPECIALIDADES</td>\n",
+       "      <td>1</td>\n",
+       "      <td>AMBULATORIOS ESPECIALIZADOS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-23.539435</td>\n",
+       "      <td>-46.455426</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1085</th>\n",
+       "      <td>1193</td>\n",
+       "      <td>332764.64</td>\n",
+       "      <td>7393114.87</td>\n",
+       "      <td>355030849000056</td>\n",
+       "      <td>3550308005008</td>\n",
+       "      <td>49</td>\n",
+       "      <td>LIBERDADE</td>\n",
+       "      <td>9</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7252455</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Privado</td>\n",
+       "      <td>30</td>\n",
+       "      <td>HOSPITAL GERAL</td>\n",
+       "      <td>7</td>\n",
+       "      <td>HOSPITAL</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>-23.563750</td>\n",
+       "      <td>-46.638590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1086</th>\n",
+       "      <td>1194</td>\n",
+       "      <td>348022.84</td>\n",
+       "      <td>7390363.26</td>\n",
+       "      <td>355030873000102</td>\n",
+       "      <td>3550308005154</td>\n",
+       "      <td>73</td>\n",
+       "      <td>SAO MATEUS</td>\n",
+       "      <td>30</td>\n",
+       "      <td>SAO MATEUS</td>\n",
+       "      <td>Leste</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7889844</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Municipal</td>\n",
+       "      <td>59</td>\n",
+       "      <td>SAD</td>\n",
+       "      <td>9</td>\n",
+       "      <td>SERVICO ASSISTENCIA DOMICILIAR</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-23.590100</td>\n",
+       "      <td>-46.489410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1087</th>\n",
+       "      <td>1195</td>\n",
+       "      <td>332826.10</td>\n",
+       "      <td>7392382.39</td>\n",
+       "      <td>355030849000102</td>\n",
+       "      <td>3550308005007</td>\n",
+       "      <td>49</td>\n",
+       "      <td>LIBERDADE</td>\n",
+       "      <td>9</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>Centro</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9500138</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Privado</td>\n",
+       "      <td>30</td>\n",
+       "      <td>HOSPITAL GERAL</td>\n",
+       "      <td>7</td>\n",
+       "      <td>HOSPITAL</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>-23.570370</td>\n",
+       "      <td>-46.638070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1088</th>\n",
+       "      <td>1196</td>\n",
+       "      <td>329273.15</td>\n",
+       "      <td>7390220.36</td>\n",
+       "      <td>355030835000088</td>\n",
+       "      <td>3550308005102</td>\n",
+       "      <td>35</td>\n",
+       "      <td>ITAIM BIBI</td>\n",
+       "      <td>11</td>\n",
+       "      <td>PINHEIROS</td>\n",
+       "      <td>Oeste</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9735372</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Privado</td>\n",
+       "      <td>30</td>\n",
+       "      <td>HOSPITAL GERAL</td>\n",
+       "      <td>7</td>\n",
+       "      <td>HOSPITAL</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>-23.589520</td>\n",
+       "      <td>-46.673120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1089</th>\n",
+       "      <td>1197</td>\n",
+       "      <td>332434.86</td>\n",
+       "      <td>7389288.99</td>\n",
+       "      <td>355030890000148</td>\n",
+       "      <td>3550308005046</td>\n",
+       "      <td>90</td>\n",
+       "      <td>VILA MARIANA</td>\n",
+       "      <td>12</td>\n",
+       "      <td>VILA MARIANA</td>\n",
+       "      <td>Sul</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9763201</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Federal</td>\n",
+       "      <td>30</td>\n",
+       "      <td>HOSPITAL GERAL</td>\n",
+       "      <td>7</td>\n",
+       "      <td>HOSPITAL</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>-23.598260</td>\n",
+       "      <td>-46.642250</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1090 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ID    COORD_E     COORD_N          SETCENS          AREAP  CODDIST  \\\n",
+       "0        1  319108.42  7380764.47  355030819000016  3550308005232       19   \n",
+       "1        2  331055.43  7400384.23  355030821000001  3550308005062       21   \n",
+       "2        3  330196.17  7380955.02  355030822000066  3550308005164       22   \n",
+       "3        4  326183.88  7373067.87  355030823000196  3550308005287       23   \n",
+       "4        5  351434.05  7396009.19  355030837000019  3550308005202       37   \n",
+       "...    ...        ...         ...              ...            ...      ...   \n",
+       "1085  1193  332764.64  7393114.87  355030849000056  3550308005008       49   \n",
+       "1086  1194  348022.84  7390363.26  355030873000102  3550308005154       73   \n",
+       "1087  1195  332826.10  7392382.39  355030849000102  3550308005007       49   \n",
+       "1088  1196  329273.15  7390220.36  355030835000088  3550308005102       35   \n",
+       "1089  1197  332434.86  7389288.99  355030890000148  3550308005046       90   \n",
+       "\n",
+       "           DISTRITO  CODSUBPREF                  SUBPREF REGIAO5  ...  \\\n",
+       "0     CAPAO REDONDO          17              CAMPO LIMPO     Sul  ...   \n",
+       "1        CASA VERDE           4  CASA VERDE-CACHOEIRINHA   Norte  ...   \n",
+       "2     CIDADE ADEMAR          16            CIDADE ADEMAR     Sul  ...   \n",
+       "3      CIDADE DUTRA          19        CAPELA DO SOCORRO     Sul  ...   \n",
+       "4          ITAQUERA          27                 ITAQUERA   Leste  ...   \n",
+       "...             ...         ...                      ...     ...  ...   \n",
+       "1085      LIBERDADE           9                       SE  Centro  ...   \n",
+       "1086     SAO MATEUS          30               SAO MATEUS   Leste  ...   \n",
+       "1087      LIBERDADE           9                       SE  Centro  ...   \n",
+       "1088     ITAIM BIBI          11                PINHEIROS   Oeste  ...   \n",
+       "1089   VILA MARIANA          12             VILA MARIANA     Sul  ...   \n",
+       "\n",
+       "         CNES SA_DEPADM     DEPADM SA_TIPO                TIPO SA_CLASSE  \\\n",
+       "0     6194974         1  Municipal      49  AMA ESPECIALIDADES         1   \n",
+       "1     6148336         1  Municipal      49  AMA ESPECIALIDADES         1   \n",
+       "2     6415415         1  Municipal      49  AMA ESPECIALIDADES         1   \n",
+       "3     6360890         1  Municipal      49  AMA ESPECIALIDADES         1   \n",
+       "4     6394558         1  Municipal      49  AMA ESPECIALIDADES         1   \n",
+       "...       ...       ...        ...     ...                 ...       ...   \n",
+       "1085  7252455         4    Privado      30      HOSPITAL GERAL         7   \n",
+       "1086  7889844         1  Municipal      59                 SAD         9   \n",
+       "1087  9500138         4    Privado      30      HOSPITAL GERAL         7   \n",
+       "1088  9735372         4    Privado      30      HOSPITAL GERAL         7   \n",
+       "1089  9763201         3    Federal      30      HOSPITAL GERAL         7   \n",
+       "\n",
+       "                              CLASSE  LEITOS   Latitude  Longitude  \n",
+       "0        AMBULATORIOS ESPECIALIZADOS     NaN -23.673787 -46.773848  \n",
+       "1        AMBULATORIOS ESPECIALIZADOS     NaN -23.497937 -46.654510  \n",
+       "2        AMBULATORIOS ESPECIALIZADOS     NaN -23.673273 -46.665135  \n",
+       "3        AMBULATORIOS ESPECIALIZADOS     NaN -23.744055 -46.705393  \n",
+       "4        AMBULATORIOS ESPECIALIZADOS     NaN -23.539435 -46.455426  \n",
+       "...                              ...     ...        ...        ...  \n",
+       "1085                        HOSPITAL   230.0 -23.563750 -46.638590  \n",
+       "1086  SERVICO ASSISTENCIA DOMICILIAR     NaN -23.590100 -46.489410  \n",
+       "1087                        HOSPITAL    16.0 -23.570370 -46.638070  \n",
+       "1088                        HOSPITAL    42.0 -23.589520 -46.673120  \n",
+       "1089                        HOSPITAL    25.0 -23.598260 -46.642250  \n",
+       "\n",
+       "[1090 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
@@ -23456,6 +23840,73 @@
     "    folium.Marker(\n",
     "        location=[row['Latitude'], row['Longitude']], popup=row['ESTAB_SA']).add_to(map)\n",
     "map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "access_key_id = os.getenv(\"AWS_ACCESS_KEY_ID\")\n",
+    "secret_access_key = os.getenv(\"AWS_SECRET_ACCESS_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ResponseMetadata': {'RequestId': 'ZW6SE993KFNNCM0B',\n",
+       "  'HostId': '2IaW9haypu28hc+4aMmhvSvQfR8bOW6g5Po2YkRZuz5jcbyAq1v5vXNjvBu4IR7bej6Vm/kjyX0=',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amz-id-2': '2IaW9haypu28hc+4aMmhvSvQfR8bOW6g5Po2YkRZuz5jcbyAq1v5vXNjvBu4IR7bej6Vm/kjyX0=',\n",
+       "   'x-amz-request-id': 'ZW6SE993KFNNCM0B',\n",
+       "   'date': 'Fri, 30 Aug 2024 23:06:21 GMT',\n",
+       "   'x-amz-version-id': 'v5X1v4.pgmPq3YkAfdGJLp.ghplqlLn8',\n",
+       "   'x-amz-server-side-encryption': 'AES256',\n",
+       "   'etag': '\"5e1444d82eb510e584904d4a42ac3249\"',\n",
+       "   'server': 'AmazonS3',\n",
+       "   'content-length': '0'},\n",
+       "  'RetryAttempts': 1},\n",
+       " 'ETag': '\"5e1444d82eb510e584904d4a42ac3249\"',\n",
+       " 'ServerSideEncryption': 'AES256',\n",
+       " 'VersionId': 'v5X1v4.pgmPq3YkAfdGJLp.ghplqlLn8'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import boto3\n",
+    "from io import StringIO\n",
+    "\n",
+    "\n",
+    "s3 = boto3.client('s3',\n",
+    "                  aws_access_key_id=access_key_id,\n",
+    "                  aws_secret_access_key=secret_access_key,\n",
+    "                  region_name = 'sa-east-1')\n",
+    "\n",
+    "csv_buffer = StringIO()\n",
+    "df.to_csv(csv_buffer, index=False)\n",
+    "\n",
+    "# Inicializar o cliente do AWS S3\n",
+    "s3 = boto3.client('s3')\n",
+    "\n",
+    "# Carregar o arquivo CSV para o S3\n",
+    "s3.put_object(Bucket='black-umbrella-fiap',\n",
+    "              Key='bronze/localizacoes/servicos_saude.csv',\n",
+    "              Body=csv_buffer.getvalue())"
    ]
   }
  ],
