:sparkles: Adicionando instituições de ensino

--- a/pipelines/dados_meteostat_distritos.ipynb
+++ b/pipelines/dados_meteostat_distritos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "2          Perus  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,12 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from geopy.geocoders import Nominatim\n",
     "import pandas as pd\n",
+    "import time\n",
     "\n",
     "# Lista dos distritos de São Paulo (exemplo)\n",
     "distritos = df['distrito']\n",
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +399,7 @@
        "[2558627 rows x 12 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,37 +457,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ResponseMetadata': {'RequestId': 'BGFWT7A17HD9189V',\n",
+       "  'HostId': 'FYFjdip9K75BX14O7gpbeSsUtvIGVdNrpdkfX5vjj+LcdOxYHrqXfz1/RhXVTqP5Y9euv5e7EM0=',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amz-id-2': 'FYFjdip9K75BX14O7gpbeSsUtvIGVdNrpdkfX5vjj+LcdOxYHrqXfz1/RhXVTqP5Y9euv5e7EM0=',\n",
+       "   'x-amz-request-id': 'BGFWT7A17HD9189V',\n",
+       "   'date': 'Sat, 31 Aug 2024 18:02:00 GMT',\n",
+       "   'x-amz-version-id': 'C9AxVsz0qw48ODzCeu04qxJHRX2okUMP',\n",
+       "   'x-amz-server-side-encryption': 'AES256',\n",
+       "   'etag': '\"f90a8ef1f64ea388ff9e751393b1bd5e\"',\n",
+       "   'server': 'AmazonS3',\n",
+       "   'content-length': '0'},\n",
+       "  'RetryAttempts': 1},\n",
+       " 'ETag': '\"f90a8ef1f64ea388ff9e751393b1bd5e\"',\n",
+       " 'ServerSideEncryption': 'AES256',\n",
+       " 'VersionId': 'C9AxVsz0qw48ODzCeu04qxJHRX2okUMP'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import boto3\n",
     "from io import StringIO\n",
     "\n",
-    "\n",
+    "# Inicializa o cliente S3\n",
     "s3 = boto3.client('s3',\n",
     "                  aws_access_key_id=access_key_id,\n",
     "                  aws_secret_access_key=secret_access_key,\n",
     "                  region_name = 'sa-east-1')\n",
     "\n",
+    "# Salva o DataFrame em um buffer\n",
     "csv_buffer = StringIO()\n",
     "final_data.to_csv(csv_buffer, index=False)\n",
-    "\n",
-    "# Inicializar o cliente do AWS S3\n",
-    "s3 = boto3.client('s3')\n",
     "\n",
     "# Carregar o arquivo CSV para o S3\n",
     "s3.put_object(Bucket='black-umbrella-fiap',\n",
     "              Key='bronze/meteostat/dados_meteorologicos_meteostat.csv',\n",
     "              Body=csv_buffer.getvalue())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -505,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
