--- a/shapefiles/ocorrencias_naturais.ipynb
+++ b/shapefiles/ocorrencias_naturais.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "4  POINT (323516.263 7385823.214)  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,35 +147,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'geopandas.geodataframe.GeoDataFrame'>\n",
-      "RangeIndex: 2514 entries, 0 to 2513\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column      Non-Null Count  Dtype         \n",
-      "---  ------      --------------  -----         \n",
-      " 0   data        2514 non-null   datetime64[ms]\n",
-      " 1   ocorrencia  2514 non-null   object        \n",
-      " 2   subpreit    2514 non-null   object        \n",
-      " 3   name        2514 non-null   object        \n",
-      " 4   geometry    2514 non-null   geometry      \n",
-      "dtypes: datetime64[ms](1), geometry(1), object(3)\n",
-      "memory usage: 98.3+ KB\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(2514, 5)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "gdf.info()"
+    "gdf.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -200,8 +192,8 @@
       " 1   ocorrencia  2514 non-null   object        \n",
       " 2   subpreit    2514 non-null   object        \n",
       " 3   name        2514 non-null   object        \n",
-      " 4   geometry    2514 non-null   geometry      \n",
-      "dtypes: datetime64[ms](1), geometry(1), object(3)\n",
+      " 4   geometry    2514 non-null   object        \n",
+      "dtypes: datetime64[ms](1), object(4)\n",
       "memory usage: 98.3+ KB\n"
      ]
     }
@@ -212,14 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_26392\\3055552666.py:1: UserWarning: Geometry column does not contain geometry.\n",
+      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_14632\\3055552666.py:1: UserWarning: Geometry column does not contain geometry.\n",
       "  gdf_novo['geometry'] = gdf_novo['geometry'].astype(str)\n"
      ]
     }
@@ -230,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +401,7 @@
        "[2514 rows x 7 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
