:sparkles: Adicionando código para base de Arborização

--- a/interrupcoes.ipynb
+++ b/interrupcoes.ipynb
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_54016\\489810114.py:1: DtypeWarning: Columns (3,5,17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_23416\\489810114.py:1: DtypeWarning: Columns (3,5,17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('/Users/prado/Downloads/interrupcoes-energia-eletrica-2024.csv', encoding='latin1', sep=';')\n"
      ]
     }
@@ -425,6 +425,37 @@
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Series.unique of 0                         Não Informado\n",
+       "1                        Não Encontrado\n",
+       "2                         Não se Aplica\n",
+       "3               CMI Power Amazonas Ltda\n",
+       "4             Banakoba - Banakoba  LTDA\n",
+       "                       ...             \n",
+       "4618204                 EVERSON VINKLER\n",
+       "4618205              ARTHUR NAHAS NEVES\n",
+       "4618206        JULIANA BRUNINI BOMTEMPO\n",
+       "4618207           ROBINSON PERCY HOLDER\n",
+       "4618208    B2 INDUSTRIA E COMERCIO LTDA\n",
+       "Name: NomAgenteRegulado, Length: 4618209, dtype: object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['NomAgenteRegulado'].unique"
    ]
   },
   {
