--- a/shapefiles/ocorrencias_naturais.ipynb
+++ b/shapefiles/ocorrencias_naturais.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "import geopandas as gpd\n",
     "import pandas as pd\n",
-    "from pyproj import Proj, Transformer\n",
-    "import re"
+    "from pyproj import Proj, Transformer"
    ]
   },
   {
