:memo: Atualizando funções de atualização dos dados meteorológicos

--- a/analise_dados_meteorologicos.ipynb
+++ b/analise_dados_meteorologicos.ipynb
@@ -46,6 +46,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bucket_name = 'black-umbrella-fiap'\n",
+    "object_key = 'bronze/ocorrencias/ocorrencias_2013_2024.csv'\n",
+    "\n",
+    "df_ocorrencias = acessar_csv_s3(bucket_name, object_key)  # Baixar o CSV existente no S3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
