:memo: Atualizando código de integração

--- a/integracao.ipynb
+++ b/integracao.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notebook criado para realizar a junção das bases de Meteorologia com Ocorrencias"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -937,13 +944,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Daqui pra baixo foram feitos apenas testes, nao considerar como versão final"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Início Integração dos dados"
    ]
   },
@@ -959,6 +959,13 @@
    "metadata": {},
    "source": [
     "## ACHO QUE AQUI VAI DAR BOM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Utilizando a base DIÁRIA meteorológica"
    ]
   },
   {
@@ -2471,11 +2478,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- Utilizando a base com HORÁRIOS meteorológicos"
+   ]
   },
   {
    "cell_type": "code",
