--- a/shapefiles/distritos_ocorrencias.ipynb
+++ b/shapefiles/distritos_ocorrencias.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notebook criado para obter o distrito de cada ocorrência"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -438,6 +445,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Realizando a junção espacial entre os DataFrames de acordo com a localização\n",
     "gdf_ocorrencias_com_distritos = gpd.sjoin(df_total, gdf, how=\"left\", predicate=\"within\")"
    ]
   },
